--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background: url("../images/northern.jpg")
+	background: url("/images/northern.jpg")
 }
 
 h1 {
@@ -15,10 +15,10 @@ img {
 
 table {
   font-family: sans-serif;
-  font-size: 15px;
+  font-size: 16px;
   margin-left: auto; 
   margin-right: auto;
-  text-align: auto;
+  text-align: center;
   width: auto;
 }
 
